a bunch of styling

--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -1,10 +1,11 @@
-$primary: #b19b81;
-$secondary: #5f6d79;
+$primary: #3a78a7;
+$secondary: #a5d0f1;
 $success: #28a745;
-$body-bg: #f8fafb;
+$body-bg: #fff;
+$dark: #34373a;
 $body-color: #25292b;
-$light: #fff;
-$input-bg: $light;
+$light: #f1f1f1;
+$input-bg: #fff;
 $enable-grid-classes: false;
 $enable-cssgrid: true;
 $enable-negative-margins: true;
